--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/src/test/resources/amazon-token.properties
 # Created by .ignore support plugin (hsz.mobi)
 ### JDeveloper template
 # default application storage directory used by the IDE Performance Cache feature
