--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,15 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    compile 'commons-codec:commons-codec:1.3'
+    compile 'org.projectlombok:lombok:1.16.6'
+    compile 'org.simpleframework:simple-xml:2.7.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
