--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ deploy/
 javadoc/
 
 # lock file, a part of Oracle Credential Store Framework
+/gradle.properties
 cwallet.sso.lck### Maven template
 target/
 pom.xml.tag
