--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,15 @@ apply plugin: 'java'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -14,4 +23,19 @@ dependencies {
     compile 'org.projectlombok:lombok:1.16.6'
     compile 'org.simpleframework:simple-xml:2.7.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile 'commons-io:commons-io:2.4'
+}
+
+
+apply plugin: 'com.bmuschko.nexus'
+extraArchive {
+    sources = false
+    tests = false
+    javadoc = false
+}
+
+nexus {
+    sign = true
+    repositoryUrl = 'http://192.168.0.6:8080/nexus/content/repositories/releases/'
+    snapshotRepositoryUrl = 'http://192.168.0.6:8080/nexus/content/repositories/snapshots/'
 }
