--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'commons-codec:commons-codec:1.3'
     compile 'org.projectlombok:lombok:1.16.6'
     compile 'org.simpleframework:simple-xml:2.7.1'
+    compile 'com.squareup.okhttp3:okhttp:3.8.0'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile 'commons-io:commons-io:2.4'
 }
