--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'jp.memorylovers'
-version '1.0.0'
+version '1.0.1-SNAPSHOT'
 
 apply plugin: 'java'
 
@@ -23,6 +23,7 @@ repositories {
 
 dependencies {
     compile 'commons-codec:commons-codec:1.3'
+    compile 'org.apache.commons:commons-lang3:3.5'
     compile 'org.projectlombok:lombok:1.16.6'
     compile 'org.simpleframework:simple-xml:2.7.1'
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
