--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,11 @@ dependencies {
     compile 'org.projectlombok:lombok:1.16.6'
     compile 'org.simpleframework:simple-xml:2.7.1'
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
+
+    // Logging
+    compile 'org.slf4j:slf4j-api:1.7.25'
+    compile 'ch.qos.logback:logback-classic:1.2.3'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile 'commons-io:commons-io:2.4'
 }
