--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
@@ -27,6 +28,7 @@ dependencies {
     compile 'org.projectlombok:lombok:1.16.6'
     compile 'org.simpleframework:simple-xml:2.7.1'
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
+    compile 'jp.memorylovers:pp4j:1.0.0'
 
     // Logging
     compile 'org.slf4j:slf4j-api:1.7.25'
